<resources>

    <string name="app_name">Harel House</string>
    <string name="tap_something">Tap an NFC tag</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Write to NFC tag</string>
    <string name="content_description">Content</string>
    <string name="nfc_setting">NFC is currently disabled in your settings. You cannot read or write NFC tags.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_main2">Home</string>
    <string name="provider_name">Home State</string>
    <string name="toggleHomeText">Toggle All</string>
    <string name="allOn">All On</string>
    <string name="allOff">All Off</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="notif_ui">Notification Preference</string>
    <string name="notif_ui_summ">Show light bulbs in the notifications drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Show lights bulbs in drawer</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lights">Lights</string>
    <string name="presence">Presence</string>
    <string name="cameras">Cameras</string>
    <string name="harel_family">Harel Family</string>
    <string name="action_cam_activate">Activate Cam</string>
    <string name="action_cam_deactivate">Deactivate Cam</string>
    <string name="notifRingtone">notifications_new_message_ringtone</string>
    <string name="sensors">Sensors</string>
    <string name="doorClosed">Door Closed</string>
    <string name="doorOpened">Door Open</string>
    <string name="ginaClosed">Gina Closed</string>
    <string name="ginaOpened">Gina Open</string>
    <string name="personArrives">person_arrives</string>
    <string name="pref_title_person_arrives">Person Arrvies</string>
    <string name="personLeaves">person_leaves</string>
    <string name="pref_title_person_leaves">Person Leaves</string>
    <string name="lightsOn">lights_on</string>
    <string name="pref_title_lights_on">Lights On</string>
    <string name="lightsOff">lights_off</string>
    <string name="pref_title_lights_off">Lights Off</string>

</resources>