<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="@string/personArrives"
        android:ringtoneType="notification"
        android:title="@string/pref_title_person_arrives"
        android:summary="this is summary"/>

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="@string/personLeaves"
        android:ringtoneType="notification"
        android:title="@string/pref_title_person_leaves"
        android:summary="this is summary"/>
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="@string/lightsOn"
        android:ringtoneType="notification"
        android:title="@string/pref_title_lights_on"
        android:summary="this is summary"/>
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="@string/lightsOff"
        android:ringtoneType="notification"
        android:title="@string/pref_title_lights_off"
        android:summary="this is summary"/>

</PreferenceScreen>
