<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lights"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/lights" />
        <item
            android:id="@+id/nav_presence"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/presence" />
        <item
            android:id="@+id/nav_cameras"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/cameras" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/open_door_entrance_black"
            android:title="@string/sensors" />
    </group>
</menu>
